--- a/cart.html
+++ b/cart.html
@@ -118,7 +118,7 @@
       localStorage.setItem("buyerOrders", JSON.stringify(buyerOrders));
       localStorage.removeItem("cart");
       alert("Orders placed successfully!");
-      window.location.href = "buyer-dashboard.html";
+      window.location.href = "buyerdashboard.html";
     }
 
     displayCart();
