--- a/buy.html
+++ b/buy.html
@@ -9,7 +9,7 @@
   <div class="container mt-4">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Khaleed Interiors</a>
+        <a class="navbar-brand">Khaleed Interiors</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,8 +19,7 @@
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="buy.html">Buy</a></li>
             <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
-            <li class="nav-item"><a class="nav-link" href="buyer-dashboard.html">My Orders</a></li>
-            <li class="nav-item"><a class="nav-link" href="buyerdashboard.html">Buyer Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link" href="buyerdashboard.html">My Orders</a></li>
           </ul>
         </div>
       </div>
