--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Your Cart - Khaleed Interiors</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="assets/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,16 +21,10 @@
           <li class="nav-item">
             <a class="nav-link" href="buy.html">Buy</a>
           </li>
+         
           <li class="nav-item">
-            <a class="nav-link" href="cart.html">Cart</a>
+            <a class="nav-link" href="buyerdashboard.html">My Orders</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="buyer-dashboard.html">My Orders</a>
-          </li>
-         <li class="nav-item">
-            <a class="nav-link" href="buyerdashboard.html">Buyer Dashboard</a>
-          </li>
-          
         </ul>
       </div>
     </div> 
@@ -118,7 +112,7 @@
       localStorage.setItem("buyerOrders", JSON.stringify(buyerOrders));
       localStorage.removeItem("cart");
       alert("Orders placed successfully!");
-      window.location.href = "buyerdashboard.html";
+      window.location.href = "buyersignup.html";
     }
 
     displayCart();
