--- a/sellerdashboard.html
+++ b/sellerdashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Seller Dashboard - Khaleed Interiors</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="assets/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
